# synloc

./: .gitignore  CHANGELOG.md  LICENSE  Paper_Graphs.ipynb  README.md  examples.py  experimenting.py  extract.dta  pyproject.toml  requirements.txt  setup.py
Notebooks/: Paper_Simulations.ipynb  README.ipynb  README.md  README_pypi.ipynb  california.csv  circulars.csv  synthpop.R  trivariate.csv
assets/: .Rhistory  circulars.csv  synthpop.R  trivariate.csv
docs/: .buildinfo  .buildinfo.bak  README.html  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/Notebooks/: clustering.doctree  copula.doctree  nearest_neighbor.doctree
docs/.doctrees/api/: methods.doctree  resamplers.doctree
docs/Notebooks/: Object_Experiments.html  Paper_Simulations.html  README.ipynb  README_pypi.html  clustering.html  copula.html  nearest_neighbor.html  nearest_neighbor.ipynb  normal_vs_uniform.html
docs/_build/doctrees/: README.doctree  api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
docs/_sources/: README.md.txt  api.rst.txt  index.rst.txt
docs/_sources/Notebooks/: Object_Experiments.ipynb.txt  Paper_Simulations.ipynb.txt  clustering.ipynb.txt  copula.ipynb.txt  nearest_neighbor.ipynb.txt
docs/_sources/api/: methods.rst.txt
docs/api/: methods.html  methods.rst  resamplers.html
src/: LocalCov.py  LocalGaussianCopula.py  LocalResampler.py  __init__.py  datasets.py  examples.py  synpytools.py
synloc/: CHANGELOG.md  __init__.py  clusterResampler.py  dists.py  kNNResampler.py  tools.py
tests/: test_dists.py  test_dists_cluster.py  test_dists_knn.py
(+21 files in other folders)
