[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synloc"
version = "0.2.3"
authors = [
    {name = "Ali Furkan Kalay", email = "alfurka@gmail.com"},
]
description = "A Python package to create synthetic data from locally estimated distributions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "tqdm"
]

keywords = [
    "copulas",
    "distributions",
    "sampling",
    "synthetic-data",
    "oversampling",
    "nonparametric-distributions",
    "semiparametric",
    "nonparametric",
    "knn",
    "clustering",
    "k-means",
    "multivariate-distributions"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/alfurka/synloc"
Documentation = "https://alfurka.github.io/synloc/"